syntax = "proto3";

option java_multiple_files = true;
option java_package= "via.sep3.supplier.protobuf";

service ShopGrpc{
  rpc OrderProduct(ProductGrpc) returns(ProductResponse);
  //rpc EditProduct(ProductGrpc) returns (ProductResponse);
}

message ProductGrpc{
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  CategoryGrpc category = 5;
}
message CategoryGrpc{
  string name = 1;
}

message ProductResponse{
  string confirmed = 1;
}


